--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build-ami:
+    name: "Build AMI"
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
@@ -42,4 +43,4 @@ jobs:
           -var "db_password=${DB_PASSWORD}" \
           -var "dockerhub_username=${DOCKERHUB_USERNAME}" \
           -var "dockerhub_token=${DOCKERHUB_TOKEN}" \
-          ./packer/aws.pkr.hcl
+          ./packer/ami.pkr.hcl
