--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,7 +8,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  push-image:
+    name: "Build and Push Docker Image"
     runs-on: ubuntu-latest
     
     steps:
