--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -8,7 +8,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-image:
+    name: "Build Docker Image"
     runs-on: ubuntu-latest
     
     steps:
