--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-image:
-    name: "Build Docker Image"
+    name: "Build and Push Docker Image"
     runs-on: ubuntu-latest
     
     steps:
