--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -27,7 +27,7 @@ jobs:
       uses: hashicorp/setup-packer@v3
 
     - name: Initialize Packer
-      run: packer init ./packer/aws.pkr.hcl
+      run: packer init ./packer/ami.pkr.hcl
 
     - name: Build AMI
       env:
