--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,7 +1,7 @@
 name: Build and Push Docker Image
 
 env:
-  DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/trading-service
+  DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/trading-service
 
 on:
   push:
@@ -18,8 +18,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
